# P2048

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  graphics.h  grid.h  utils.h
src/: game.c  graphics.c  grid.c  main.c  utils.c
